--- a/pokedex/templates/pokedex/pokemon_list.html
+++ b/pokedex/templates/pokedex/pokemon_list.html
@@ -13,7 +13,7 @@
          <th>Picture</th>
          <th>Name</th>
          <th>Is yellow?</th>
-         <!--<th></th>-->
+         <th>Date</th>
          <!--<th width="230">Comments</th>-->
       </tr>
 
@@ -22,6 +22,7 @@
          <td><img src="{% static 'pokedex/pokeball.png' %}" alt="" /></td>
          <td>{{ pokemon.name }}</td>
          <td>{% if pokemon.is_yellow %}Yes{% else %}No{% endif %}</td>
+         <td>{{ pokemon.date_added|date:'d-m-Y'  }}</td>
          <!--<td></td>-->
          <!--<td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </td>-->
       </tr>
